--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
               bucks along the way 😉).
 			</div>
             <div class="intro__buttons intro__buttons--left">
-              <a href="index.html" class="btn btn--red-bg">SIGN UP NOW</a>
+				<a href="https://discord.gg/RKFqbQQFcm" class="btn btn--blue-bg">JOIN THE DISCORD</a>
+				<a href="https://gsvlu610vy7.typeform.com/to/e6jwkIZX" class="btn btn--red-bg">SIGN UP NOW</a>
+		
             </div>
           </div>
         </div>
