--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       >
         <div class="intro">
           <div class="intro__content">
-            <div class="intro__title"><span>Rocket </span> your careers</div>
+            <div class="intro__title"><span>Rocket </span> your career</div>
             <div class="intro__subtitle">
               Hack The Oak aims to provide students with an environment,
               resources and opportunity to grow and be prepared for the world of
