--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
       name="viewport"
       content="width=device-width; initial-scale=1; maximum-scale=1"
     />
-    <meta name="author" content="SmartTemplates" />
+    <meta name="author" content="HackTheOak" />
     <meta
       name="description"
       content="landing page template for saas companies"
     />
     <meta
       name="keywords"
-      content="landing page template, saas landing page template, saas website template, one page saas template"
+      content="White Oaks's Secondary's first school wide hackathon"
     />
     <title>Hack The Oak</title>
     <link rel="stylesheet" href="css/swiper.css" />
