--- a/index.html
+++ b/index.html
@@ -273,20 +273,20 @@
 			<div class="grid grid--2col grid--support">
 			
 				<div class="grid__item grid__item--padding">
-					<div class="grid__icon"><img src="images/icons/icons-64-white/support-64.png" alt="" title=""/></div>
+					<div class="grid__icon"><i class="far fa-question-circle fa-4x" style="color: #313EE7;"></i></div>
 					<h3 class="grid__title">Help &amp; Support</h3>
 					<p class="grid__text">Your issue is our main priority. Our support team is here to help you and make sure all your questions are answered.</p>
 					<a href="mailto:helptheoak@gmail.com" class="grid__more">helptheoak@gmail.com</a>
 				</div>
 				<div class="grid__item grid__item--padding">
-					<div class="grid__icon"><img src="images/icons/icons-64-white/globe-64.png" alt="" title=""/></div>
+					<div class="grid__icon"><i class="fas fa-envelope fa-4x" style="color: #313EE7;"></i></div>
 					<h3 class="grid__title">Intrested in a sponsorship or partnership?</h3>
 					<p class="grid__text">Contact our team to receive a sponsorship packet for more information regarding sponsorships or if interested in hosting an event for attendees.
 					</p>
 					<a href="mailto:HackTheOak@gmail.com" class="grid__more">hacktheoak@gmail.com</a>
 				</div>
 				<div class="grid__item grid__item--padding">
-					<div class="grid__icon"><img src="images/icons/icons-64-white/wallet-64.png" alt="" title=""/></div>
+					<div class="grid__icon"><i class="fab fa-instagram fa-4x" style="color: #313EE7;"></i></div>
 					<h3 class="grid__title">Instagram</h3>
 					<p class="grid__text">Looking to keep upto date on Hack The Oak news? follow our instagram for uptodate info or join the discord to join the community!
 					</p>
