--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="HackTheOak" />
     <meta
       name="description"
-      content="landing page template for saas companies"
+      content="White Oaks's Secondary's first school wide hackathon"
     />
     <meta
       name="keywords"
