--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta name="author" content="HackTheOak" />
     <meta
       name="description"
-      content="Oakville’s premier high school hackathon"
+      content="Oakville’s premier high school wide hackathon"
     />
     <meta
       name="keywords"
-      content="Oakville’s premier high school hackathon"
+      content="Oakville’s premier high school wide hackathon"
     />
     <title>Hack The Oak</title>
     <link rel="stylesheet" href="css/swiper.css" />
